--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
 	  "default_title": "copy tab info"
   },
   "description": "",
+  "icons": {
+	  "128": "icon.png"
+  },
   "manifest_version": 2,
   "name": "copyTabInfo",
   "options_ui": {
@@ -19,5 +22,5 @@
     "activeTab",
     "storage"
   ],
-  "version": "0.1.0"
+  "version": "0.1.1"
 }
