--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,18 @@
 {
   "author": "igorlogius",
   "browser_action": {
-	  "default_title": "copy tab information in a custom format",
+	  "default_title": "Get Tabs Infos",
 	  "default_popup": "options.html"
   },
-  "description": "",
+  "description": "Get Tabs Infos",
   "icons": {
 	  "128": "icon.png"
   },
   "manifest_version": 2,
-  "name": "copytabinfo",
+  "name": "Get Tabs Infos",
   "permissions": [
-    "clipboardWrite",
-    "notifications",
-    "storage",
-    "tabs"
+    "tabs",
+    "storage"
   ],
-  "version": "1.3.7"
+  "version": "1.4.0"
 }
