--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,34 @@
 {
   "author": "igorlogius",
   "browser_action": {
-	  "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "theme_icons": [
+      {
+        "light": "dark-256.png",
+        "dark": "light-256.png",
+        "size": 256
+      },
+      {
+        "light": "dark-128.png",
+        "dark": "light-128.png",
+        "size": 128
+      },
+      {
+        "light": "dark-64.png",
+        "dark": "light-64.png",
+        "size": 64
+      },
+      {
+        "light": "dark-32.png",
+        "dark": "light-32.png",
+        "size": 32
+      },
+      {
+        "light": "dark-16.png",
+        "dark": "light-16.png",
+        "size": 16
+      }
+    ]
   },
   "icons": {
 	  "128": "icon.png"
@@ -12,5 +39,5 @@
     "tabs",
     "storage"
   ],
-  "version": "1.6.6"
+  "version": "1.7.6"
 }
