--- a/manifest.json
+++ b/manifest.json
@@ -31,13 +31,10 @@
     ]
   },
   "icons": {
-	  "128": "icon.png"
+    "128": "icon.png"
   },
   "manifest_version": 2,
   "name": "Get Tabs Infos",
-  "permissions": [
-    "tabs",
-    "storage"
-  ],
-  "version": "1.10.6"
+  "permissions": ["tabs", "storage"],
+  "version": "1.10.7"
 }
