--- a/manifest.json
+++ b/manifest.json
@@ -1,42 +1,23 @@
 {
   "author": "igorlogius",
+  "homepage_url": "https://github.com/igorlogius",
   "browser_action": {
     "default_area": "navbar",
     "default_popup": "popup.html",
     "theme_icons": [
       {
         "light": "dark-256.png",
-        "dark": "light-256.png",
+        "dark": "icon.png",
         "size": 256
-      },
-      {
-        "light": "dark-128.png",
-        "dark": "light-128.png",
-        "size": 128
-      },
-      {
-        "light": "dark-64.png",
-        "dark": "light-64.png",
-        "size": 64
-      },
-      {
-        "light": "dark-32.png",
-        "dark": "light-32.png",
-        "size": 32
-      },
-      {
-        "light": "dark-16.png",
-        "dark": "light-16.png",
-        "size": 16
       }
     ]
   },
   "icons": {
-    "128": "icon.png"
+    "256": "icon.png"
   },
   "manifest_version": 2,
   "name": "Get Tabs Infos",
   "description": "Get tab information in a user defined custom format string",
   "permissions": ["tabs", "storage"],
-  "version": "1.10.8"
+  "version": "1.10.9"
 }
