--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
   "author": "igorlogius",
   "homepage_url": "https://github.com/igorlogius",
+
   "browser_action": {
+    "browser_style": true,
     "default_area": "navbar",
     "default_popup": "popup.html",
     "theme_icons": [
@@ -19,5 +21,5 @@
   "name": "Get Tabs Infos",
   "description": "Get tab information in a user defined custom format string",
   "permissions": ["tabs", "storage"],
-  "version": "1.10.10"
+  "version": "1.10.11"
 }
